<resources>
    <string name="app_name">Athenaeum</string>
    <string name="username_hint">Username</string>
    <string name="signin_label">Sign In</string>
    <string name="password_hint">Password</string>
    <string name="signin_btn">Sign In</string>
    <string name="forgot_password_txt">Forgot Password?</string>
    <string name="copyright_appname">&#169; Athenaeum, 2019</string>
    <string name="progress_txt">Please wait while we are loading...</string>
    <string name="home_label">Home</string>
    <string name="collection_label">Collection</string>
    <string name="result_label">Result</string>
    <string name="setting_label">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stream_title">Stream</string>
    <string name="year_2019_label">2019</string>
    <string name="more_label">More</string>
    <string name="year_2010_label">2010</string>
    <string name="year_2011_label">2011</string>
    <string name="year_2012_label">2012</string>
    <string name="year_2013_label">2013</string>
    <string name="year_2014_label">2014</string>
    <string name="year_2015_label">2015</string>
    <string name="year_2016_label">2016</string>
    <string name="year_2017_label">2017</string>
    <string name="year_2018_label">2018</string>
    <string name="no_question_available">No Question Available!!!</string>
    <string name="prev_question_sample_title">Question Paper 2016 BLa Bla Bla blablabal</string>
    <string name="dummy_semester_title">6</string>
    <string name="semester_title">Semester:</string>
    <string name="video_title_label">Dummy Video Title</string>
    <string name="video_board_title">Video Board</string>
    <string name="view_label">123,456</string>
    <string name="subject_label">Subject</string>
    <string name="description_dummy_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec mi sagittis, tristique quam ac, auctor nisi. Sed aliquet, dolor sit amet pharetra placerat, leo ex bibendum sem, vitae rutrum massa odio eget nisl. Cras feugiat porta libero, ut malesuada lectus egestas id. Sed pulvinar, augue mollis sodales malesuada, diam arcu consectetur dolor, ut commodo tortor felis sed massa. Aliquam laoreet enim nisi, et maximus lectus vestibulum sit amet. Nunc malesuada ligula nec dignissim condimentum. Etiam eu tincidunt ipsum. Donec sed fringilla ante. Suspendisse a molestie justo.</string>
    <string name="add_to_collection">Add To Collection</string>
    <string name="description_label">Description</string>
</resources>
