<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".SignIn"
    android:id="@+id/signin_root">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin_label"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AuthenticationFloatingEditText">

        <EditText
            android:id="@+id/signin_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionNext"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AuthenticationFloatingEditText">

        <EditText
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:layout_margin="20dp"
            android:textColor="@color/white"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/signin_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/forgot_password_txt"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/signin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/signin_btn"
        android:textColor="@color/white"
        android:background="@drawable/signin_background"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/copyright_appname"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:gravity="bottom"
        android:layout_margin="20dp" />

</LinearLayout>