<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Theater">

    <FrameLayout
        android:id="@+id/theater_banner_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/theater_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/bba_banner" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#66BBBBBB">

        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/video_icon"
            android:layout_gravity="center" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/theater_video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/video_title_label"
            android:textSize="21sp"
            android:textColor="@color/primaryText"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/theater_video_views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_label"
            android:textSize="16sp"
            android:paddingTop="5dp"/>

        <TextView
            android:id="@+id/theater_video_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject_label"
            android:textSize="16sp"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            android:paddingTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:textSize="16sp"
            android:textColor="@color/primaryText"
            android:paddingTop="5dp"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/theater_video_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_dummy_content"
                android:textSize="16sp"
                android:textColor="@color/primaryText"
                android:paddingTop="2dp" />

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/theater_add_to_col_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/add_to_collection"
            android:textColor="@color/white"
            android:layout_gravity="bottom" />

    </LinearLayout>

</LinearLayout>
