<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:layout_marginBottom="3dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    app:contentPadding="10dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/video_full_thumbnail"
            android:layout_width="128dp"
            android:layout_height="72dp"
            android:src="@drawable/btech_banner"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/video_full_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/video_title_label"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/video_full_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_label"
                android:layout_marginTop="2dp"/>

            <TextView
                android:id="@+id/video_full_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="2dp"
                android:text="@string/description_dummy_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>