<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:cardElevation="2dp"
        app:contentPadding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prev_question_board_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/year_2019_label"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>

                <TextView
                    android:id="@+id/prev_question_board_more_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/more_label"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/prev_question_board_paper_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/prev_question_board_not_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_question_available"
                android:gravity="center"
                android:padding="20dp"
                android:visibility="gone"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>