<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:contentPadding="10dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="80dp"
            android:src="@drawable/pdf_icon"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_previous_question_paper_full_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:text="@string/prev_question_sample_title"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="0dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/semester_title"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/item_previous_question_paper_full_semester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_semester_title"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_file_download_grey_24dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>